Partial fix to T66126: Non-Active Grease Pencil object stuck in drawmode

This only handles the issue after file load.

To make it an all-around solution we need to deal with
this in ed_object_select_pick, do_outliner_item_activate_tree_element(),
...