source/blender/editors/util/ed_util.c
@@ -126,8 +126,12 @@ void ED_editors_init(bContext *C)
       continue;
     }
     else if (ob->type == OB_GPENCIL) {
-      /* For multi-edit mode we may already have mode data.
-       * (grease pencil does not need it) */
+      /* For multi-edit mode we may already have mode data (grease pencil does not need it).
+       * However we may have a non-active object stuck in a greasepencil edit mode. */
+      if (ob != obact) {
+        ob->mode = OB_MODE_OBJECT;
+        DEG_id_tag_update(&ob->id, ID_RECALC_COPY_ON_WRITE);
+      }
       continue;
     }
 
